--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,8 @@ future                   : true # false (default)
 words_per_minute         : 200
 # atom_feed:
 #   path                   : # blank (default) uses feed.xml
+search                   : true # false (default)
+search_provider          : lunr (default) # algolia, google
 
 # Site Author
 author:
