--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ words_per_minute         : 200
 # atom_feed:
 #   path                   : # blank (default) uses feed.xml
 search                   : true # false (default)
-search_provider          : lunr (default) # algolia, google
+search_provider          : lunr # algolia, google
 
 # Site Author
 author:
